@@ -1,6 +1,8 @@
 Changes in version 2.5.3-9001 (Release date: )
 ==============
-
+* Changes to internals
+	- Allow input of categorical matrix to all the intermediate functions
+	- no longer allow distFunction as argument to internal functions (subsampleClustering, mainClustering, seqCluster). These functions no longer will calculate distances, only the top level function, `clusterSingle`. 
 
 Changes in version 2.5.3 (Release date: May 29, 2019)
 ==============
